Add new ending for announcement
